Updating bug fixed white space

--- a/style/style.css
+++ b/style/style.css
@@ -180,7 +180,7 @@
         top:0;
     }
     nav .navlinks{
-        position: absolute;
+        position: fixed;
         top: 110px;
         right: -60%;
         bottom: 0;
